ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npsp__Grant_Deadline__c/npsp__Grant_Deadline__c.object-meta.xml
<CustomObject>
    <description>A custom object for tracking various grant/gift seeking deliverables such as the LOI delivery date, application date, and report due dates.</description>
    <label>Deliverable</label>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>